--- a/Chinook.ipynb
+++ b/Chinook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e9a1428b",
+   "id": "cb15500b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "705174a7",
+   "id": "d6f02d7b",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2bd8d65",
+   "id": "c6b0d84e",
    "metadata": {},
    "source": [
     "![png](ERD.png)"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8f1786af",
+   "id": "ee0a3078",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a11934ac",
+   "id": "fb827071",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9de9c211",
+   "id": "28846b6f",
    "metadata": {},
    "outputs": [
     {
@@ -242,22 +242,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f457a687",
+   "execution_count": 11,
+   "id": "304ace51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customerid</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>most_purchase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>25.86</td>\n",
+       "      <td>Czech Republic</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customerid  Total   most_purchase\n",
+       "0           6  25.86  Czech Republic"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q = \"\"\"\n",
-    "SELECT i.customerid, max(i.Total), c.Country AS most_purchase \n",
+    "SELECT i.customerid, i.Total, c.Country AS most_purchase \n",
     "FROM Invoice AS i\n",
-    "JOIN Customer c \n",
-    "GROUP BY customerid\n",
-    "ORDER BY most_purchase DESC\n",
+    "JOIN Customer c ON c.customerId = i.CustomerId\n",
+    "ORDER BY i.Total DESC\n",
     "LIMIT 1\n",
     "\"\"\"\n",
     "\n",
     "pd.read_sql(q, engine)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4d37a95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
